--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.7.63",
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
@@ -21,6 +22,7 @@
     "express": "^4.21.1",
     "firebase": "^11.2.0",
     "form-data": "^4.0.1",
+    "googleapis": "^170.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
